--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,18 @@
 {
-  "CONTRACT_ADDRESS": "0x827acb09a2dc20e39c9aad7f7190d9bc53534192",
-  "SCAN_LINK": "https://polygonscan.com/token/0x827acb09a2dc20e39c9aad7f7190d9bc53534192",
+  "CONTRACT_ADDRESS": "0x36f1cAc97e6Ff14E03e2Bd201DAE72bcaD656983",
+  "SCAN_LINK": "https://etherscan.io/address/0x36f1cac97e6ff14e03e2bd201dae72bcad656983",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "ETH",
-    "ID": 137
+    "ID": 1
   },
-  "NFT_NAME": "DEEP STATE DEGENERATES",
-  "SYMBOL": "DSD",
+  "NFT_NAME": "DEGEN",
+  "SYMBOL": "DEGEN",
   "MAX_SUPPLY": 11111,
   "WEI_COST": 11110000000000000,
   "DISPLAY_COST": 0.01111,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/nerdy-coder-clones",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/deep-state-degens",
   "SHOW_BACKGROUND": true
 }
