--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NCC",
-  "name": "Coder Clone NFT",
+  "short_name": "DEGEN",
+  "name": "DEEP STATE DEGENS",
   "icons": [
     {
       "src": "favicon.ico",
